clap/backends/fastapi-test/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-test
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: fastapi-test
